win page integration completed'

--- a/bid-history.html
+++ b/bid-history.html
@@ -151,9 +151,8 @@
                             <small>${transactionList[i]?.game_name}-${transactionList[i]?.game_type}</small>
                         </div>
                         <div>
-                            <p class="float-right"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                            <p class="float-right mt-2"><b>- ₹256</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                     class="ml-1" height="14px" alt=""></p>
-                            <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : 654</p>
                         </div>
                     </div>
                 </div>`
