Withdrawal route integration completed

--- a/deposite-history.html
+++ b/deposite-history.html
@@ -149,7 +149,7 @@
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                         <div>
                             <h6>${transactionList[i]?.transaction_name}</h6>
-                            <small>20 Apr, 12:39 PM</small>
+                            <small>${convertDateAndTime(transactionList[i]?.created_at)}</small>
                         </div>
                         <div>
                             <p class="float-right"><b>+ ₹${transactionList[i]?.transaction_amount}</b><img src="./assets/shapes/clarity_wallet-line.svg"
