--- a/bid.html
+++ b/bid.html
@@ -159,12 +159,12 @@
         <div class="bid_list_table_container mt-3">
             <table class="table" id="bidTable_id">
             </table>
-            <div
-                style="height: 30px;padding: 5px 10px;position: fixed;bottom: 86px;border-radius: 9px;width: 90vw;right: 15px;background-color: white;">
-                <p class="float-right" style="color: black;">
-                    <b>Total: ₹<span id="totalBidValue"></span></b>
-                </p>
-            </div>
+        </div>
+        <div
+            style="height: 30px;padding: 5px 10px;position: absolute;bottom: 85px;border-radius: 9px;width: 90vw;right: 15px;background-color: white;">
+            <p class="float-right" style="color: black;">
+                <b>Total: ₹<span id="totalBidValue"></span></b>
+            </p>
         </div>
         <div class="d-flex justify-content-center mt-4">
             <button class="bid_play_btn" id="bid_play" onclick="handlePlay()">PLAY</button>
