Add token expire logout in all page

--- a/bid-history.html
+++ b/bid-history.html
@@ -121,7 +121,7 @@
     <script type="text/javascript" src="js/plugins/bootstrap-notify.min.js"></script>
     <script type="text/javascript">
         authenticate()
-        let cookieData =  getCookie("user_jwt");
+        let cookieData = getCookie("user_jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
         if (cookieData) {
@@ -159,13 +159,18 @@
                 </div>`
                     }
                 } else {
-                    $.notify({
-                        title: "",
-                        message: response.data?.msg,
-                        icon: 'fa fa-times'
-                    }, {
-                        type: "danger",
-                    });
+                    if (response?.data?.is_logged_out) {
+                        localStorage.setItem("isLoggedIn", "false");
+                        location.href = "index.html";
+                    } else {
+                        $.notify({
+                            title: "",
+                            message: response.data?.msg,
+                            icon: 'fa fa-times'
+                        }, {
+                            type: "danger",
+                        });
+                    }
                 }
                 console.log(response)
             }, (error) => {
