--- a/withdrawal.html
+++ b/withdrawal.html
@@ -108,7 +108,7 @@
         <div class="transaction_main_container">
             <h4>Transaction Details</h4>
             <div class="transaction_content_container" id="transaction_container">
-                
+
             </div>
         </div>
     </main>
@@ -159,13 +159,18 @@
                     </div>`
                     }
                 } else {
-                    $.notify({
-                        title: "",
-                        message: response.data?.msg,
-                        icon: 'fa fa-times'
-                    }, {
-                        type: "danger",
-                    });
+                    if (response?.data?.is_logged_out) {
+                        localStorage.setItem("isLoggedIn", "false");
+                        location.href = "index.html";
+                    } else {
+                        $.notify({
+                            title: "",
+                            message: response.data?.msg,
+                            icon: 'fa fa-times'
+                        }, {
+                            type: "danger",
+                        });
+                    }
                 }
                 console.log(response)
             }, (error) => {
